--- a/plants/css/style.css
+++ b/plants/css/style.css
@@ -328,4 +328,203 @@ body {
 
 /*main service end */
 
+/* price */
+.price{
+  padding-top:40px;
+  padding-bottom: 115px;
+}
+
+.price__container
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.price__info{
+  background:none;
+}
+
+.price-header__base{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 50px;
+  color:#000;
+  max-width: 452px;
+}
+
+.contact__us-header {
+  margin-bottom: 38px;
+  text-align: right;
+}
+
+.contact__us {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.contact__us-header__green{
+  color: var(--green-var);
+}
+
+.contact__us-button {
+  width: 162px;
+  height: 50px;
+  display: block;
+  background: none;
+  text-align: center;
+  padding: 12px 0;
+  border:1px solid var(--orange-var);
+  border-radius: 5px;
+  font-family: 'Inika';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  color: var(--orange-var);
+  text-decoration: none;
+  margin-bottom: 39px;
+}
+
+.contact__us-button:hover, .contact__us-button:active, .contact__us-button:focus{
+  background-color: var(--orange-var);
+  color: #fff;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.contact__us-image {
+  width: 152px;
+  height: 175px;
+}
+
+.price-header {
+  margin-bottom: 60px;
+}
+
+.price__list__container {
+  border: 1px solid #E3E1D5;
+  border-radius: 20px;
+  padding: 34px 41px;
+}
+
+.price__list{
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  row-gap: 32px;
+}
+
+.price__list-item {
+  width: 250px;
+  padding: 16px 40px;
+  background-color: #EDF2EC;
+  border-radius: 20px;
+}
+
+.price__list-item-header-container{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.price__list-item-header {
+  font-family: 'Inter';
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 18px;
+  color: #000;
+}
+
+.price__list-item-header-btn {
+  text-decoration: none;
+  line-height: 20px;
+  content: url('../assets/svg/accordion_btn_regular.svg');
+}
+
+.price__list-item-header-image{
+  width: 16px;
+  height: 16px;
+  margin: auto;
+  vertical-align: middle; 
+  display: inline-block;
+}
+
+.price__list-item-content {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items:flex-start;
+  max-width: 169px;
+  margin-top: 12px;
+}
+
+.hidden {
+  display: none;
+}
+
+.price__text__info {
+  font-family: 'Inter';
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  color: #000;
+  margin-bottom: 7px;
+}
+
+.price__info__separator {
+  border-top: 0.5px solid #AEA1A1;
+  width: 97%;
+  margin-bottom: 6px;
+}
+
+.price__text {
+  color: var(--orange-var);
+}
+
+.price__text__digits {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.price__description {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 10px;
+  line-height: 10px;
+  color: var(--light-grey-var);
+  margin-bottom: 6px;
+}
+
+.order__button {
+  width: 86px;
+  text-decoration: none;
+  background: #fff;
+  border-radius: 10px;
+  padding: 3px 20px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--light-grey-var);
+}
+
+.order__button:hover, .order__button:active, .order__button:focus{
+  color: var(--orange-var);
+  cursor: pointer;
+  transition: 1s;
+}
+
+/* price end */
 }
