--- a/plants/css/style.css
+++ b/plants/css/style.css
@@ -1017,6 +1017,60 @@ body {
 
   /* service media end--------------------------------------------------------------------------------------------------------*/
 
+  /* price media start--------------------------------------------------------------------------------------------------------*/
+
+  .price{
+    padding-top:40px;
+    padding-bottom: 88px;
+  } 
+    
+  .price-header {
+    font-size: 35px;
+    line-height: 42px;
+    margin-bottom: 50px;
+  }
+  
+  .price__list__container {
+    padding: 34px 41px;
+    margin-bottom: 0;
+  }
+  
+  .price__list{
+    row-gap: 32px;
+  }
+  
+  .price__list-item {
+    width: 250px;
+    padding: 16px 40px;
+  }
+
+  .contact__us{
+    margin-top: 99px;
+  }
+ 
+  .contact__us-header {
+    font-size: 25px;
+    line-height: 35px;
+    max-width: 296px;
+    margin-bottom: 21.5px;
+  }
+  
+  .contact__us-button {
+    width: 162px;
+    height: 50px;
+    padding: 12px 0;
+    font-size: 20px;
+    line-height: 26px;  
+    margin-bottom: 34px;
+  }
+    
+  .contact__us-image {
+    width: 152px;
+    height: 175px;
+  }
+
+  /* price media end----------------------------------------------------------------------------------------------------------*/
+
 
   /* footer media start--------------------------------------------------------------------------------------------------------*/
   
@@ -1235,6 +1289,70 @@ body {
   }
     
   /* service media end--------------------------------------------------------------------------------------------------------*/
+
+  /* price media start--------------------------------------------------------------------------------------------------------*/
+
+  .price{
+    padding-top:25px;
+    padding-bottom: 40px;
+  }
+  
+  .price__container
+  {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+    
+  .price-header {
+    font-size: 25px;
+    line-height: 30px;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  
+  .price__list__container {
+    padding: 29px 22px;
+    margin-bottom: 19px;
+  }
+  
+  .price__list{
+    row-gap: 14px;
+  }
+  
+  .price__list-item {
+    width: 180px;
+    padding: 16px 30px;
+
+  }
+
+  .contact__us{
+    align-items: center;
+    margin-top: 0;
+  }
+ 
+  .contact__us-header {
+    text-align: center;
+    font-size: 20px;
+    line-height: 35px;
+    max-width: 230px;
+    margin-bottom: 14px;
+  }
+  
+  .contact__us-button {
+    width: 121px;
+    height: 35px;
+    padding: 8px 0;
+    font-size: 15px;
+    line-height: 20px;
+    margin-bottom: 0px;
+  }
+    
+  .contact__us-image {
+    display: none;
+  }
+
+  /* price media end----------------------------------------------------------------------------------------------------------*/
 
 
   /* ----------------------------------------------------------------------------------------------------------------------------*/
