--- a/plants/css/style.css
+++ b/plants/css/style.css
@@ -1158,8 +1158,8 @@ body {
   }
 
   .header {
-    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
-    box-shadow: 0 8px 8px -4px lightblue;
+    position: relative;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 
   .header__logo{
